[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "luban"
version = "0.2.0"
description = "A small terminal coding agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # standard library only — installs from a single offline wheel

[project.scripts]
luban = "luban.cli:main"

[tool.setuptools]
packages = ["luban"]
